samples/_failures_safe/1761138113_503c1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fada8ad0.c: In function ‘main’:
./samples/SAFE/__tmp_fada8ad0.c:158:9: error: expected expression at end of input
  158 |         printf("%u ", *(compressed.data +
      |         ^~~~~~
./samples/SAFE/__tmp_fada8ad0.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fada8ad0.c:158:9: error: expected declaration or statement at end of input
